--- a/TTT/TTT/App.xaml
+++ b/TTT/TTT/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Enigma.App"
+﻿<Application x:Class="TTT.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Enigma"
+             xmlns:local="clr-namespace:TTT"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
