Removed hovering effect from buttons

--- a/TTT/TTT/MainWindow.xaml
+++ b/TTT/TTT/MainWindow.xaml
@@ -6,12 +6,23 @@
         xmlns:local="clr-namespace:TTT"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="TTT" Height="500" Width="500">
+        Title="Tiles Turning Tint" Height="500" Width="500">
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Background" Value="White"/>
-            <Setter Property="BorderThickness" Value="2"/>
-            <Setter Property="FontSize" Value="50"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid Background="{TemplateBinding Background}">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="CommonStates">
+                                    <VisualState x:Name="Normal"/>
+                                    <VisualState x:Name="MouseOver"/>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Window.Resources>
     <Grid x:Name="Container">
